[gd_scene load_steps=41 format=3 uid="uid://byadrotxvbue2"]

[ext_resource type="Shader" uid="uid://dfvihl7peqgch" path="res://crt_effect.gdshader" id="1_1p1yg"]
[ext_resource type="Shader" uid="uid://bwqbejaosf0t4" path="res://ui/MainMenu/Shaders/Blacklucktitle.gdshader" id="2_ov01g"]
[ext_resource type="FontFile" uid="uid://cdwfvs2qjhtp0" path="res://ui/MainMenu/Fonts/Verve.ttf" id="3_y3mow"]
[ext_resource type="Texture2D" uid="uid://osq8j671cuba" path="res://Assets/table/Taula9.png" id="4_p8qel"]
[ext_resource type="Script" uid="uid://1ox6fbdtsb42" path="res://Scripts/Labels/Player/PHPLabel.gd" id="5_7xtld"]
[ext_resource type="Script" uid="uid://claeblc1cbfub" path="res://Scripts/Labels/Player/TurnLabel.gd" id="6_1jd3i"]
[ext_resource type="Script" uid="uid://dbq6tb2gtd1lc" path="res://Scripts/Labels/Player/CardsSumLabel.gd" id="7_6bpmn"]
[ext_resource type="Script" uid="uid://byjh35iwrbvwr" path="res://Scripts/Labels/Player/playerAmount.gd" id="8_5w8et"]
[ext_resource type="Script" uid="uid://ddimr2wheyrh4" path="res://Scripts/Labels/AI/aiHP.gd" id="9_pea3r"]
[ext_resource type="Script" uid="uid://biixoi4puv1vu" path="res://Scripts/Labels/AI/aiTurn.gd" id="10_ro21p"]
[ext_resource type="Script" uid="uid://183maronmbmi" path="res://Scripts/Labels/AI/aiSum.gd" id="11_davux"]
[ext_resource type="Script" uid="uid://6pv4xdes08pl" path="res://Scripts/Labels/AI/aiAmount.gd" id="12_da1he"]
[ext_resource type="Script" uid="uid://c1fpwwp36lmg2" path="res://Scripts/GameManager2.0.gd" id="13_id2c4"]
[ext_resource type="Script" uid="uid://dephdxcef2x4o" path="res://Scripts/Player.gd" id="14_8w7an"]
[ext_resource type="Script" uid="uid://bgera035t6kqr" path="res://Scripts/Terminator.gd" id="15_wvbbp"]
[ext_resource type="Script" uid="uid://d01ni6kk5f72" path="res://Scripts/CardManager.gd" id="16_wpo3d"]
[ext_resource type="Script" uid="uid://baicvcewbvcdf" path="res://Scripts/CenterHand.gd" id="17_7pc0u"]
[ext_resource type="PackedScene" uid="uid://dlpo3snxu2gq4" path="res://Scenes/CardSlot.tscn" id="18_nlvap"]
[ext_resource type="Texture2D" uid="uid://ch6d7ati52dh" path="res://Assets/Slot.png" id="19_7br7p"]
[ext_resource type="Script" uid="uid://bas6nkpltdexr" path="res://Scripts/Deck.gd" id="20_33e7s"]
[ext_resource type="Texture2D" uid="uid://lmq2ywiwpv2b" path="res://Assets/Deck.png" id="21_x0dtf"]
[ext_resource type="Script" uid="uid://bnq3r07d80fuy" path="res://Scripts/InputManager.gd" id="22_82s5k"]
[ext_resource type="Script" uid="uid://bxw3gjsidrrb0" path="res://Scripts/SoundManager.gd" id="23_hfij1"]
[ext_resource type="AudioStream" uid="uid://cwn2fm4lc0vd5" path="res://Assets/Sound/revolverShot1.mp3" id="24_02xof"]
[ext_resource type="AudioStream" uid="uid://wvsbtwejmwpi" path="res://Assets/Sound/noBullet.mp3" id="25_nlwdp"]
[ext_resource type="AudioStream" uid="uid://cp54nt1isub87" path="res://Assets/Sound/revolverSpin.mp3" id="26_dvf6a"]
[ext_resource type="PackedScene" uid="uid://b7dws7ygl7jmx" path="res://Assets/Revolver/scene.gltf" id="27_be3cg"]
[ext_resource type="Script" uid="uid://cf6uquyeaahc" path="res://Scripts/RealRevolver.gd" id="28_t6326"]
[ext_resource type="Script" uid="uid://u2ic2lherf7o" path="res://Scripts/point_light_2d.gd" id="29_b1apg"]
[ext_resource type="Script" uid="uid://dwith67qqvmxp" path="res://Scripts/AnimationManager.gd" id="30_adfku"]
[ext_resource type="PackedScene" uid="uid://cp3836185v15m" path="res://Scenes/pause_menu.tscn" id="31_tye0p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0mf7u"]
shader = ExtResource("1_1p1yg")
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/scan_line_amount = 0.152
shader_parameter/warp_amount = 0.348
shader_parameter/noise_amount = 0.035
shader_parameter/interference_amount = 0.0
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.37
shader_parameter/vignette_intensity = 1.0
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.0
shader_parameter/roll_speed = 3.8e-07
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o0qrb"]
shader = ExtResource("2_ov01g")
shader_parameter/font_color = Color(1, 0, 0, 1)
shader_parameter/noise_scale = 80.0
shader_parameter/darkness = 0.4
shader_parameter/glitch_strength = 0.01
shader_parameter/time_slowdown = 2.5
shader_parameter/glitch_start_time = 0.5
shader_parameter/glitch_ramp_duration = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_amdel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3r8my"]
size = Vector2(178, 262)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ontce"]
albedo_texture = ExtResource("4_p8qel")
metallic = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_ontce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ontce"]
size = Vector2(318, 111)

[sub_resource type="Gradient" id="Gradient_ontce"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.743243)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s7xlw"]
gradient = SubResource("Gradient_ontce")
fill = 1
fill_from = Vector2(0.5, 0.485849)

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
process_mode = 4
z_index = -4096
material = SubResource("ShaderMaterial_0mf7u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Blackluck" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 500
material = SubResource("ShaderMaterial_o0qrb")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 245.775
offset_top = 403.665
offset_right = 1647.78
offset_bottom = 773.665
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_y3mow")
theme_override_font_sizes/font_size = 300
text = "BLACKLUCK"
horizontal_alignment = 1

[node name="Mesa" type="Sprite2D" parent="."]
visible = false
z_index = -100
position = Vector2(961.5, 540.5)
scale = Vector2(1.001, 1)
texture = ExtResource("4_p8qel")

[node name="playerLabels" type="Node" parent="."]

[node name="playerHP" type="Label" parent="playerLabels"]
anchors_preset = -1
anchor_left = -0.034375
anchor_top = -0.0944444
anchor_right = -0.034375
anchor_bottom = -0.0944444
offset_left = 1813.0
offset_top = 844.0
offset_right = 1906.0
offset_bottom = 901.0
theme_override_fonts/font = ExtResource("3_y3mow")
theme_override_font_sizes/font_size = 42
text = "PlayerHP"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_7xtld")
metadata/_edit_use_anchors_ = true

[node name="playerTurn" type="Label" parent="playerLabels"]
anchors_preset = -1
anchor_left = -0.0125
anchor_top = -0.0944444
anchor_right = -0.0015625
anchor_bottom = -0.0907407
offset_left = 1749.0
offset_top = 922.0
offset_right = 1842.0
offset_bottom = 979.0
theme_override_fonts/font = ExtResource("3_y3mow")
theme_override_font_sizes/font_size = 15
text = "PlayerTurn"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_1jd3i")
metadata/_edit_use_anchors_ = true

[node name="playerSum" type="Label" parent="playerLabels"]
offset_left = 1714.0
offset_top = 904.0
offset_right = 1859.0
offset_bottom = 949.0
theme_override_fonts/font = ExtResource("3_y3mow")
theme_override_font_sizes/font_size = 36
text = "PlayerSum"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_6bpmn")
metadata/_edit_use_anchors_ = true

[node name="playerAmount" type="Label" parent="playerLabels"]
anchors_preset = -1
anchor_left = -0.0609375
anchor_top = -0.0166667
anchor_right = -0.0609375
anchor_bottom = -0.0166667
offset_left = 1811.0
offset_top = 988.0
offset_right = 2008.0
offset_bottom = 1033.0
theme_override_fonts/font = ExtResource("3_y3mow")
theme_override_font_sizes/font_size = 36
text = "PlayerAmount"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_5w8et")
metadata/_edit_use_anchors_ = true

[node name="aiLabels" type="Node" parent="."]

[node name="aiHP" type="Label" parent="aiLabels"]
offset_left = 110.0
offset_top = 236.0
offset_right = 203.0
offset_bottom = 293.0
theme_override_fonts/font = ExtResource("3_y3mow")
text = "aiHP"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_pea3r")
metadata/_edit_use_anchors_ = true

[node name="aiTurn" type="Label" parent="aiLabels"]
offset_left = 102.0
offset_top = 156.0
offset_right = 195.0
offset_bottom = 213.0
theme_override_fonts/font = ExtResource("3_y3mow")
text = "aiTurn"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_ro21p")
metadata/_edit_use_anchors_ = true

[node name="aiSum" type="Label" parent="aiLabels"]
anchors_preset = -1
anchor_left = -0.0546875
anchor_top = -0.0722222
anchor_right = -0.0546875
anchor_bottom = -0.0722222
offset_left = 136.0
offset_top = 167.0
offset_right = 219.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("3_y3mow")
text = "aiSum"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_davux")
metadata/_edit_use_anchors_ = true

[node name="aiAmount" type="Label" parent="aiLabels"]
anchors_preset = -1
anchor_left = -0.025
anchor_top = -0.0944444
anchor_right = -0.025
anchor_bottom = -0.0944444
offset_left = 184.0
offset_top = 184.0
offset_right = 277.0
offset_bottom = 241.0
theme_override_fonts/font = ExtResource("3_y3mow")
text = "aiAmount"
label_settings = SubResource("LabelSettings_amdel")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("12_da1he")
metadata/_edit_use_anchors_ = true

[node name="GameManager" type="Node" parent="."]
script = ExtResource("13_id2c4")

[node name="Player" type="Node" parent="."]
script = ExtResource("14_8w7an")

[node name="Terminator" type="Node" parent="."]
script = ExtResource("15_wvbbp")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("16_wpo3d")

[node name="CenterHand" type="Node2D" parent="."]
script = ExtResource("17_7pc0u")

[node name="iaHand" type="Node2D" parent="."]

[node name="CardSlot" parent="iaHand" instance=ExtResource("18_nlvap")]
position = Vector2(381, 201)
Who_Owns = false

[node name="CardSlot2" parent="iaHand" instance=ExtResource("18_nlvap")]
position = Vector2(674, 199)
Who_Owns = false

[node name="CardSlot3" parent="iaHand" instance=ExtResource("18_nlvap")]
position = Vector2(963, 201)
Who_Owns = false

[node name="CardSlot4" parent="iaHand" instance=ExtResource("18_nlvap")]
position = Vector2(1250, 201)
Who_Owns = false

[node name="CardSlot5" parent="iaHand" instance=ExtResource("18_nlvap")]
position = Vector2(1540, 201)
Who_Owns = false

[node name="Slot" type="Sprite2D" parent="iaHand"]
position = Vector2(380, 201)
texture = ExtResource("19_7br7p")

[node name="Slot2" type="Sprite2D" parent="iaHand"]
position = Vector2(673, 197)
texture = ExtResource("19_7br7p")

[node name="Slot3" type="Sprite2D" parent="iaHand"]
position = Vector2(963, 200)
texture = ExtResource("19_7br7p")

[node name="Slot4" type="Sprite2D" parent="iaHand"]
position = Vector2(1250, 201)
texture = ExtResource("19_7br7p")

[node name="Slot5" type="Sprite2D" parent="iaHand"]
position = Vector2(1539, 200)
texture = ExtResource("19_7br7p")

[node name="playerHand" type="Node2D" parent="."]
position = Vector2(3, 352)

[node name="CardSlot6" parent="playerHand" instance=ExtResource("18_nlvap")]
position = Vector2(382, 529)

[node name="CardSlot7" parent="playerHand" instance=ExtResource("18_nlvap")]
position = Vector2(673, 526)

[node name="CardSlot8" parent="playerHand" instance=ExtResource("18_nlvap")]
position = Vector2(959, 529)

[node name="CardSlot9" parent="playerHand" instance=ExtResource("18_nlvap")]
position = Vector2(1247, 530)

[node name="CardSlot10" parent="playerHand" instance=ExtResource("18_nlvap")]
position = Vector2(1534, 530)

[node name="Slot6" type="Sprite2D" parent="playerHand"]
position = Vector2(382, 528)
texture = ExtResource("19_7br7p")

[node name="Slot7" type="Sprite2D" parent="playerHand"]
position = Vector2(672, 525)
texture = ExtResource("19_7br7p")

[node name="Slot8" type="Sprite2D" parent="playerHand"]
position = Vector2(957, 529)
texture = ExtResource("19_7br7p")

[node name="Slot9" type="Sprite2D" parent="playerHand"]
position = Vector2(1247, 529)
texture = ExtResource("19_7br7p")

[node name="Slot10" type="Sprite2D" parent="playerHand"]
position = Vector2(1534, 531)
texture = ExtResource("19_7br7p")

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(2075, 518)
script = ExtResource("20_33e7s")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
texture = ExtResource("21_x0dtf")

[node name="Area2D" type="Area2D" parent="Deck"]
z_index = -2
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
z_index = -2
shape = SubResource("RectangleShape2D_3r8my")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
z_index = -2
offset_left = -86.0
offset_top = -129.0
scale = Vector2(2, 2)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("22_82s5k")

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("23_hfij1")

[node name="revolverShot" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("24_02xof")
volume_db = -80.0

[node name="noBullet" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("25_nlwdp")

[node name="revolverSpin" type="AudioStreamPlayer2D" parent="SoundManager"]
position = Vector2(240, 474)
stream = ExtResource("26_dvf6a")

[node name="PlayerEars" type="AudioListener2D" parent="SoundManager"]
position = Vector2(986, 1210)
current = true

[node name="3DViewport" type="Area2D" parent="."]
z_index = -8
scale = Vector2(1.005, 1.005)
collision_layer = 0
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="3DViewport"]
offset_left = -3.0
offset_right = 1917.0
offset_bottom = 1080.0
focus_mode = 0
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="3DViewport/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 2
screen_space_aa = 1
mesh_lod_threshold = 0.0
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Sketchfab_Scene" parent="3DViewport/SubViewportContainer/SubViewport" instance=ExtResource("27_be3cg")]
transform = Transform3D(1.23897, 0.393642, -0.00147637, 0, 0.00487566, 1.29999, 0.393644, -1.23896, 0.00464677, -18.906, 6.699, -1.516)

[node name="Camera3D" type="Camera3D" parent="3DViewport/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 24.3433, -0.172432)
cull_mask = 1

[node name="SpotLight3D" type="SpotLight3D" parent="3DViewport/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -0.0137876, 0.999905, 0, -0.999905, -0.0137876, 0, 22.5541, 0)
light_color = Color(1, 0.64351, 0.572673, 1)
light_energy = 16.0
shadow_enabled = true
spot_range = 32.0447
spot_angle = 63.5867

[node name="MeshInstance3D" type="MeshInstance3D" parent="3DViewport/SubViewportContainer/SubViewport"]
transform = Transform3D(32.0308, 0, 0, 0, 25.415, 0, 0, 0, 25.415, 0, 5.64746, 0)
material_override = SubResource("StandardMaterial3D_ontce")
mesh = SubResource("PlaneMesh_ontce")

[node name="CollisionShape2D" type="CollisionShape2D" parent="3DViewport"]
position = Vector2(3387, 819)
shape = SubResource("RectangleShape2D_ontce")

[node name="RevolverButton" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128
script = ExtResource("28_t6326")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RevolverButton"]
position = Vector2(151, 117)
scale = Vector2(16.1, 12.7)
polygon = PackedVector2Array(-11.1801, 8.89764, 14.9068, 19.2126, 17.4534, 26.6142, 20.6211, 38.5827, 20.3727, 47.7165, 17.4534, 51.7323, 8.26087, 48.189, 8.13665, 43.7008, 10.8075, 38.7402, 10.9317, 35.9055, 7.57764, 36.9291, 5.21739, 36.063, 2.79503, 32.9921, 1.98758, 30.1575, 0.124224, 27.9528, -0.248447, 23.937, -4.40994, 21.1811, -8.38509, 20, -12.236, 17.6378)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(930, 498.05)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = SubResource("GradientTexture2D_s7xlw")
texture_scale = 22.83
script = ExtResource("29_b1apg")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.133196, 0.133196, 0.133196, 1)

[node name="AnimationManager" type="Node" parent="."]
script = ExtResource("30_adfku")

[node name="Camera2D" type="Camera2D" parent="."]
light_mask = 0
visibility_layer = 0
position = Vector2(960, 540)
editor_draw_screen = false

[node name="PauseMenu" parent="." instance=ExtResource("31_tye0p")]
z_index = 4096
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2

[connection signal="callAI" from="GameManager" to="Terminator" method="_on_game_manager_call_ai"]
[connection signal="callCountAmount" from="GameManager" to="Player" method="_on_game_manager_call_count_amount"]
[connection signal="callCountAmount" from="GameManager" to="Terminator" method="_on_game_manager_call_count_amount"]
[connection signal="callDeck" from="GameManager" to="Deck" method="_on_game_manager_call_deck"]
[connection signal="callPlayer" from="GameManager" to="Player" method="_on_game_manager_call_player"]
[connection signal="resetCardSlots" from="GameManager" to="iaHand/CardSlot" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="iaHand/CardSlot2" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="iaHand/CardSlot3" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="iaHand/CardSlot4" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="iaHand/CardSlot5" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="playerHand/CardSlot6" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="playerHand/CardSlot7" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="playerHand/CardSlot8" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="playerHand/CardSlot9" method="_on_game_manager_reset_card_slots"]
[connection signal="resetCardSlots" from="GameManager" to="playerHand/CardSlot10" method="_on_game_manager_reset_card_slots"]
[connection signal="callSoundManager" from="Terminator" to="SoundManager" method="call_sound_manager"]
[connection signal="drawCards" from="Terminator" to="Deck" method="_on_game_manager_call_deck"]
[connection signal="callCardSlot" from="CardManager" to="iaHand/CardSlot" method="_on_card_manager_call_card_slot"]
[connection signal="anime_playerRevolver" from="RevolverButton" to="AnimationManager" method="anime_playerRevolver"]
[connection signal="callSoundManager" from="RevolverButton" to="SoundManager" method="call_sound_manager"]
[connection signal="drawCards" from="RevolverButton" to="Deck" method="_on_game_manager_call_deck"]
[connection signal="input_event" from="RevolverButton" to="RevolverButton" method="_on_input_event"]
[connection signal="mouse_entered" from="RevolverButton" to="RevolverButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RevolverButton" to="RevolverButton" method="_on_mouse_exited"]
